[gd_scene load_steps=9 format=3 uid="uid://xg2n633dmlgi"]

[ext_resource type="Script" uid="uid://bpn4srvk8koln" path="res://scenes/inventory/hud/hud.gd" id="1_vxnji"]

[sub_resource type="LabelSettings" id="LabelSettings_mcvr8"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_klgdb"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_e0arn"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_vxnji"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_q3qlq"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_ul5re"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_5dwww"]
font_size = 36

[node name="Hud" type="Node2D"]
script = ExtResource("1_vxnji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 373.0
offset_bottom = 397.0

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_mcvr8")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PAP: "
label_settings = SubResource("LabelSettings_klgdb")

[node name="PapCount" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_e0arn")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Trophy: "
label_settings = SubResource("LabelSettings_vxnji")

[node name="current_trophy" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_q3qlq")

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "/"
label_settings = SubResource("LabelSettings_ul5re")

[node name="max_trophy" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_5dwww")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.8605198, -0.28725332, 0.42070317, 0, 0.8258523, 0.5638866, -0.50941694, -0.48523554, 0.7106623, 0.7127646, 1.6714963, 2.4753788)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.8196023, -0.32712016, 0.47036633, 0, 0.82097983, 0.5709572, -0.5729329, -0.46795782, 0.67287695, 0.81086385, 1.58526, 2.1899762)

[node name="Node" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport"]
